--- a/source/web/.htaccess
+++ b/source/web/.htaccess
@@ -1,3 +1,18 @@
+# Let the root directory be the rewrite base
+RewriteBase /
+
+# Let the front controller be the directory index
+DirectoryIndex app.php
+
+# Turn on the rewrite engine
 RewriteEngine On
 
+# Display existing files and directories
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+
+# Rewrite any other request to the font controller
+RewriteRule .* app.php/$0 [PT,L]
+
+# Error
 ErrorDocument 404 /error404.php
